gdb 	PR exp/9059: 	* valops.c (find_overload_match): Follow typedefs before taking 	address of object argument. gdb/testsuite 	PR exp/9059: 	* gdb.cp/call-c.exp: Add regression test. 	* gdb.cp/call-c.cc (FooHandle): New typedef. 	(main): New variable 'handle'.